BlockDialog - basic infrastructure.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -29,6 +29,9 @@
   "avatar-too-small" : "Avatar image size should be at least 100x100 pixels.",
   "back-to-feed" : "← {feed}",
   "bio" : "Bio",
+  "block" : "Block",
+  "block-ellipsis" : "Block...",
+  "block-node" : "Block {name}",
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
@@ -89,6 +92,9 @@
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
   "deleting" : "Deleting...",
+  "deny-comments" : "Deny comments",
+  "deny-comments-reactions" : "Deny comments and reactions",
+  "deny-everything-hide" : "Deny everything and hide",
   "description" : "Description",
   "disconnect" : "Disconnect",
   "disconnected-from-home" : "You have been disconnected from your home blog.",
@@ -299,6 +305,7 @@
   "no" : "No",
   "no-actions" : "No actions",
   "no-addons" : "No add-ons loaded.",
+  "no-block" : "Do not block",
   "node-name-not-exists" : "No node with such name exist.",
   "node-settings-changed-conflict" : "Blog settings were changed by somebody.",
   "no-name-known" : "no name known",
@@ -659,6 +666,7 @@
   "transfer-existing-name" : "Transfer an existing name",
   "transfer-existing-name-button" : "Transfer an Existing Name",
   "transfer-node-name" : "Transfer Name From Another Node",
+  "unblock" : "Unblock",
   "undo" : "Undo",
   "unfollow-comments" : "Unfollow comments",
   "unfriend" : "Unfriend",
