--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -29,6 +29,9 @@
   "avatar-too-small" : "Размер картинки для аватара должен быть хотя бы 100x100 пикселов",
   "back-to-feed" : "← {feed}",
   "bio" : "О себе",
+  "block" : "Заблокировать",
+  "block-ellipsis" : "Заблокировать...",
+  "block-node" : "Заблокировать {name}",
   "bold" : "Полужирный",
   "bottom" : "В начало",
   "cancel" : "Отмена",
@@ -89,6 +92,9 @@
   "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
   "delete-draft" : "Удалить черновик",
   "deleting" : "Удаление...",
+  "deny-comments" : "Запретить комментарии",
+  "deny-comments-reactions" : "Запретить комментарии и реакции",
+  "deny-everything-hide" : "Запретить всё и скрыть",
   "description" : "Описание",
   "disconnect" : "Отключиться",
   "disconnected-from-home" : "Вы были отключены от вашего домашнего блога.",
@@ -299,6 +305,7 @@
   "no" : "Нет",
   "no-actions" : "Действий нет",
   "no-addons" : "Нет загруженных дополнений.",
+  "no-block" : "Не блокировать",
   "node-name-not-exists" : "Не существует блога с таким именем.",
   "node-settings-changed-conflict" : "Настройки блога были кем-то изменены.",
   "no-name-known" : "неизвестное имя",
@@ -659,6 +666,7 @@
   "transfer-existing-name" : "Переместить существующее имя",
   "transfer-existing-name-button" : "Переместить существующее имя",
   "transfer-node-name" : "Переместить имя с другого узла",
+  "unblock" : "Разблокировать",
   "undo" : "Отменить",
   "unfollow-comments" : "Не следить за комментариями",
   "unfriend" : "Удалить из друзей",
