--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -29,6 +29,9 @@
   "avatar-too-small" : "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back-to-feed" : "← {feed}",
   "bio" : "Про себе",
+  "block" : "Заблокувати",
+  "block-ellipsis" : "Заблокувати...",
+  "block-node" : "Заблокувати {name}",
   "bold" : "Жирний",
   "bottom" : "У початок",
   "cancel" : "Відмінити",
@@ -89,6 +92,9 @@
   "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
   "delete-draft" : "Видалити чернетку",
   "deleting" : "Видалення...",
+  "deny-comments" : "Заборонити коментарі",
+  "deny-comments-reactions" : "Заборонити коментарі та реакції",
+  "deny-everything-hide" : "Заборонити все та приховати",
   "description" : "Опис",
   "disconnect" : "Відключитись",
   "disconnected-from-home" : "Ви були відключені від вашого домашнього блогу.",
@@ -299,6 +305,7 @@
   "no" : "Ні",
   "no-actions" : "Дій немає",
   "no-addons" : "Немає завантажених додатків.",
+  "no-block" : "Не блокувати",
   "node-name-not-exists" : "Не існує блогу з цим ім'ям.",
   "node-settings-changed-conflict" : "Налаштування блога були кимось змінені.",
   "no-name-known" : "невідоме ім'я",
@@ -659,6 +666,7 @@
   "transfer-existing-name" : "Перемістити існуюче ім'я",
   "transfer-existing-name-button" : "Перемістити існуюче ім'я",
   "transfer-node-name" : "Перемістити ім'я з іншого вузла",
+  "unblock" : "Розблокувати",
   "undo" : "Скасувати",
   "unfollow-comments" : "Не слідкувати за коментарями",
   "unfriend" : "Вилучити з друзів",
