Display blocking status.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -30,8 +30,10 @@
   "back-to-feed" : "← {feed}",
   "bio" : "О себе",
   "block" : "Заблокировать",
+  "blocked" : "Заблокирован",
   "block-ellipsis" : "Заблокировать...",
-  "block-node" : "Заблокировать {name}",
+  "blocking-ellipsis" : "Блокировка...",
+  "blocking-node" : "Блокировка {name}",
   "bold" : "Полужирный",
   "bottom" : "В начало",
   "cancel" : "Отмена",
@@ -202,6 +204,7 @@
     "tiny" : "Крохотный"
   },
   "in" : "в",
+  "in-blocked" : "В заблокированных",
   "in-friends" : "В друзьях",
   "insert-image" : "Вставить картинку",
   "insert-link" : "Вставить ссылку",
