--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -30,8 +30,10 @@
   "back-to-feed" : "← {feed}",
   "bio" : "Про себе",
   "block" : "Заблокувати",
+  "blocked" : "Заблокований",
   "block-ellipsis" : "Заблокувати...",
-  "block-node" : "Заблокувати {name}",
+  "blocking-ellipsis" : "Блокування...",
+  "blocking-node" : "Блокування {name}",
   "bold" : "Жирний",
   "bottom" : "У початок",
   "cancel" : "Відмінити",
@@ -202,6 +204,7 @@
     "tiny" : "Крихітний"
   },
   "in" : "у",
+  "in-blocked" : "У заблокованих",
   "in-friends" : "У друзях",
   "insert-image" : "Вставити картинку",
   "insert-link" : "Вставити посилання",
