--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -30,8 +30,10 @@
   "back-to-feed" : "← {feed}",
   "bio" : "Bio",
   "block" : "Block",
+  "blocked" : "Blocked",
   "block-ellipsis" : "Block...",
-  "block-node" : "Block {name}",
+  "blocking-ellipsis" : "Blocking...",
+  "blocking-node" : "Blocking {name}",
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
@@ -202,6 +204,7 @@
     "tiny" : "Tiny"
   },
   "in" : "in",
+  "in-blocked" : "In blocked",
   "in-friends" : "In friends",
   "insert-image" : "Insert an image",
   "insert-link" : "Insert a link",
