List of blocked/blocked-by on People page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -31,6 +31,7 @@
   "bio" : "Bio",
   "block" : "Block",
   "blocked" : "Blocked",
+  "blocked-plural" : "Blocked",
   "block-ellipsis" : "Block...",
   "blocking-ellipsis" : "Blocking...",
   "blocking-node" : "Blocking {name}",
@@ -205,6 +206,7 @@
   },
   "in" : "in",
   "in-blocked" : "In blocked",
+  "in-blocked-plural" : "In blocked",
   "in-friends" : "In friends",
   "insert-image" : "Insert an image",
   "insert-link" : "Insert a link",
