Setting blocking reason.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -35,6 +35,7 @@
   "block-ellipsis" : "Block...",
   "blocking-ellipsis" : "Blocking...",
   "blocking-node" : "Blocking {name}",
+  "blocking-reason" : "Reason of blocking",
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
