--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -35,6 +35,7 @@
   "block-ellipsis" : "Заблокувати...",
   "blocking-ellipsis" : "Блокування...",
   "blocking-node" : "Блокування {name}",
+  "blocking-reason" : "Причина блокування",
   "bold" : "Жирний",
   "bottom" : "У початок",
   "cancel" : "Відмінити",
