--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -216,6 +216,9 @@
   "instant-summary" : {
     "and" : "та",
     "and-others" : "і ще {count}",
+    "blocked-comment" : "коментувати",
+    "blocked-reaction" : "реагувати на",
+    "blocked-reaction-and-comment" : "коментувати та реагувати на",
     "in-node-blog" : "блозі {node}",
     "in-their-blog" : "своєму блозі",
     "in-your-blog" : "вашому блозі",
@@ -233,6 +236,7 @@
       "asked-to-friend" : "{node} {gender, select, female {попросила} other {попросив}} вас додати {gender, select, female {її} other {його}} до себе у друзі",
       "asked-to-friend-group" : "{node} {gender, select, female {попросила} other {попросив}} вас додати {gender, select, female {її} other {його}} до своєї групи друзів \"{group}\"",
       "asked-to-subscribe" : "{node} {gender, select, female {попросила} other {попросив}} вас підписатись на {gender, select, female {її} other {його}} стрічку",
+      "blocked-user" : "{node} {gender, select, female {заборонила} other {заборонив}} вам {operations} {gender, select, female {її} other {його}} пости",
       "comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокоментувала} other {прокоментував}}} other {прокоментували}} ваш пост {heading}",
       "comment-media-reaction-added" : "{reactions} картинку у вашому коментарі {heading} до {posting}",
       "comment-media-reaction-failed" : "Не вдалося підписати реакцію на картинку в коментарі {commentNode} {commentHeading} до посту {postingNode} {postingHeading}",
@@ -258,7 +262,8 @@
       "remote-comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокоментувала} other {прокоментував}}} other {прокоментували}} {posting} {heading}, {reason}",
       "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {відповіла} other {відповів}}} other {відповіли}} на ваш коментар {heading} до {posting}",
       "subscriber-added" : "{node} {gender, select, female {підписалась} other {підписався}} на вашу стрічку {feed}",
-      "subscriber-deleted" : "{node} {gender, select, female {відписалась} other {відписався}} від вашої стрічки {feed}"
+      "subscriber-deleted" : "{node} {gender, select, female {відписалась} other {відписався}} від вашої стрічки {feed}",
+      "unblocked-user" : "{node} {gender, select, female {дозволила} other {дозволив}} вам {operations} {gender, select, female {її} other {його}} пости"
     },
     "supported" : "{count, plural, =1 {{gender, select, female {схвалила} other {схвалив}}} other {схвалили}}",
     "their-post" : "свій пост",
