Displaying details of blocking.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -36,6 +36,7 @@
   "blocking-ellipsis" : "Blocking...",
   "blocking-node" : "Blocking {name}",
   "blocking-reason" : "Reason of blocking",
+  "blocking-till" : "Blocking till",
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
@@ -100,6 +101,9 @@
   "deny-comments-reactions" : "Deny comments and reactions",
   "deny-everything-hide" : "Deny everything and hide",
   "description" : "Description",
+  "details-blocking" : "Details of blocking",
+  "details-blocking-by-name" : "Details of blocking by {name}",
+  "details-blocking-name" : "Details of blocking {name}",
   "disconnect" : "Disconnect",
   "disconnected-from-home" : "You have been disconnected from your home blog.",
   "discussion-closed" : "Discussion is closed",
@@ -329,6 +333,7 @@
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
+  "not-specified" : "Not specified",
   "not-subscribed" : "Not subscribed",
   "not-valid-e-mail" : "Not a valid e-mail address",
   "ok" : "OK",
@@ -377,6 +382,9 @@
   "profile" : "Profile",
   "profile-edited-conflict" : "Profile was edited by somebody.",
   "progress" : "{done} of {total} done",
+  "prohibited" : "Prohibited",
+  "prohibited-to-comment" : "commenting",
+  "prohibited-to-reaction" : "adding reactions",
   "provider" : "Provider",
   "provider-setting" : "(provider setting)",
   "qr-code" : "QR Code",
