--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -36,6 +36,7 @@
   "blocking-ellipsis" : "Блокировка...",
   "blocking-node" : "Блокировка {name}",
   "blocking-reason" : "Причина блокировки",
+  "blocking-till" : "Блокировка до",
   "bold" : "Полужирный",
   "bottom" : "В начало",
   "cancel" : "Отмена",
@@ -100,6 +101,9 @@
   "deny-comments-reactions" : "Запретить комментарии и реакции",
   "deny-everything-hide" : "Запретить всё и скрыть",
   "description" : "Описание",
+  "details-blocking" : "Подробности блокировки",
+  "details-blocking-by-name" : "Подробности блокировки со стороны {name}",
+  "details-blocking-name" : "Подробности блокировки {name}",
   "disconnect" : "Отключиться",
   "disconnected-from-home" : "Вы были отключены от вашего домашнего блога.",
   "discussion-closed" : "Обсуждение закрыто",
@@ -329,6 +333,7 @@
   "nothing-yet" : "Тут пока пусто.",
   "notify-about-update" : "Уведомить подписчиков об обновлении",
   "notify-followers" : "Уведомить подписчиков",
+  "not-specified" : "Не указана",
   "not-subscribed" : "Не {gender, select, female {подписан} other {подписана}}",
   "not-valid-e-mail" : "Недопустимый адрес e-mail",
   "ok" : "OK",
@@ -377,6 +382,9 @@
   "profile" : "Профиль",
   "profile-edited-conflict" : "Профиль был кем-то отредактирован.",
   "progress" : "{done} из {total} готово",
+  "prohibited" : "Запрещено",
+  "prohibited-to-comment" : "комментировать",
+  "prohibited-to-reaction" : "добавлять реакции",
   "provider" : "Провайдер",
   "provider-setting" : "(устанавливается провайдером)",
   "qr-code" : "QR-код",
