--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -36,6 +36,7 @@
   "blocking-ellipsis" : "Блокування...",
   "blocking-node" : "Блокування {name}",
   "blocking-reason" : "Причина блокування",
+  "blocking-till" : "Блокування до",
   "bold" : "Жирний",
   "bottom" : "У початок",
   "cancel" : "Відмінити",
@@ -100,6 +101,9 @@
   "deny-comments-reactions" : "Заборонити коментарі та реакції",
   "deny-everything-hide" : "Заборонити все та приховати",
   "description" : "Опис",
+  "details-blocking" : "Подробиці блокування",
+  "details-blocking-by-name" : "Подробиці блокування з боку {name}",
+  "details-blocking-name" : "Подробиці блокування {name}",
   "disconnect" : "Відключитись",
   "disconnected-from-home" : "Ви були відключені від вашого домашнього блогу.",
   "discussion-closed" : "Обговорення закрите",
@@ -329,6 +333,7 @@
   "nothing-yet" : "Тут поки що порожньо.",
   "notify-about-update" : "Повідомити підписникам про оновлення",
   "notify-followers" : "Повідомити підписникам",
+  "not-specified" : "Не вказана",
   "not-subscribed" : "Не {gender, select, female {підписаний} other {підписана}}",
   "not-valid-e-mail" : "Неприпустима адреса e-mail",
   "ok" : "OK",
@@ -377,6 +382,9 @@
   "profile" : "Профіль",
   "profile-edited-conflict" : "Профіль був кимось відредагований.",
   "progress" : "{done} з {total} зроблено",
+  "prohibited" : "Заборонено",
+  "prohibited-to-comment" : "коментувати",
+  "prohibited-to-reaction" : "додавати реакції",
   "provider" : "Провайдер",
   "provider-setting" : "(встановлюється провайдером)",
   "qr-code" : "QR-код",
