Show blocking period in instants.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -221,6 +221,7 @@
     "and" : "and",
     "and-others" : "and {count} {count, plural, one {other} other {others}}",
     "blocked-comment" : "to comment",
+    "blocked-period" : "for {days} {days, plural, one {day} other {days}}",
     "blocked-reaction" : "to add reactions to",
     "blocked-reaction-and-comment" : "to comment and to add reactions to",
     "in-node-blog" : "{node} blog",
@@ -240,7 +241,7 @@
       "asked-to-friend" : "{node} has asked you to add {gender, select, male {him} female {her} other {them}} to your friends",
       "asked-to-friend-group" : "{node} has asked you to add {gender, select, male {him} female {her} other {them}} to your group of friends \"{group}\"",
       "asked-to-subscribe" : "{node} has asked you to subscribe to {gender, select, male {his} female {her} other {their}} feed",
-      "blocked-user" : "{node} has denied you {operations} {gender, select, male {his} female {her} other {their}} posts",
+      "blocked-user" : "{node} has denied you {operations} {gender, select, male {his} female {her} other {their}} posts {period}",
       "comment-added" : "{comments} commented on your post {heading}",
       "comment-media-reaction-added" : "{reactions} a media in your comment {heading} on {posting}",
       "comment-media-reaction-failed" : "Failed to sign a reaction to a media in {commentNode} comment {commentHeading} to {postingNode} post {postingHeading}",
