--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -221,6 +221,7 @@
     "and" : "та",
     "and-others" : "і ще {count}",
     "blocked-comment" : "коментувати",
+    "blocked-period" : "протягом {days} {days, plural, one {дня} other {днів}}",
     "blocked-reaction" : "реагувати на",
     "blocked-reaction-and-comment" : "коментувати та реагувати на",
     "in-node-blog" : "блозі {node}",
@@ -240,7 +241,7 @@
       "asked-to-friend" : "{node} {gender, select, female {попросила} other {попросив}} вас додати {gender, select, female {її} other {його}} до себе у друзі",
       "asked-to-friend-group" : "{node} {gender, select, female {попросила} other {попросив}} вас додати {gender, select, female {її} other {його}} до своєї групи друзів \"{group}\"",
       "asked-to-subscribe" : "{node} {gender, select, female {попросила} other {попросив}} вас підписатись на {gender, select, female {її} other {його}} стрічку",
-      "blocked-user" : "{node} {gender, select, female {заборонила} other {заборонив}} вам {operations} {gender, select, female {її} other {його}} пости",
+      "blocked-user" : "{node} {gender, select, female {заборонила} other {заборонив}} вам {operations} {gender, select, female {її} other {його}} пости {period}",
       "comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокоментувала} other {прокоментував}}} other {прокоментували}} ваш пост {heading}",
       "comment-media-reaction-added" : "{reactions} картинку у вашому коментарі {heading} до {posting}",
       "comment-media-reaction-failed" : "Не вдалося підписати реакцію на картинку в коментарі {commentNode} {commentHeading} до посту {postingNode} {postingHeading}",
