--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -221,6 +221,7 @@
     "and" : "и",
     "and-others" : "и ещё {count}",
     "blocked-comment" : "комментировать",
+    "blocked-period" : "в течение {days} {days, plural, one {дня} other {дней}}",
     "blocked-reaction" : "реагировать на",
     "blocked-reaction-and-comment" : "комментировать и реагировать на",
     "in-node-blog" : "блоге {node}",
@@ -240,7 +241,7 @@
       "asked-to-friend" : "{node} {gender, select, female {попросила} other {попросил}} вас добавить {gender, select, female {её} other {его}} к себе в друзья",
       "asked-to-friend-group" : "{node} {gender, select, female {попросила} other {попросил}} вас добавить {gender, select, female {её} other {его}} в свою группу друзей \"{group}\"",
       "asked-to-subscribe" : "{node} {gender, select, female {попросила} other {попросил}} вас подписаться на {gender, select, female {её} other {его}} ленту",
-      "blocked-user" : "{node} {gender, select, female {запретила} other {запретил}} вам {operations} {gender, select, female {её} other {его}} посты",
+      "blocked-user" : "{node} {gender, select, female {запретила} other {запретил}} вам {operations} {gender, select, female {её} other {его}} посты {period}",
       "comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} ваш пост {heading}",
       "comment-media-reaction-added" : "{reactions} картинку в вашем комментарии {heading} к {posting}",
       "comment-media-reaction-failed" : "Не удалось подписать реакцию на картинку в комментарии {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
