--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -322,6 +322,7 @@
   "no-actions" : "Действий нет",
   "no-addons" : "Нет загруженных дополнений.",
   "no-block" : "Не блокировать",
+  "no-blocking" : "Нет блокировки.",
   "node-name-not-exists" : "Не существует блога с таким именем.",
   "node-settings-changed-conflict" : "Настройки блога были кем-то изменены.",
   "no-name-known" : "неизвестное имя",
