--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -99,7 +99,7 @@
   "deleting" : "Deleting...",
   "deny-comments" : "Deny comments",
   "deny-comments-reactions" : "Deny comments and reactions",
-  "deny-everything-hide" : "Deny everything and hide",
+  "deny-everything-hide" : "Deny everything and hide in discussions",
   "description" : "Description",
   "details-blocking" : "Details of blocking",
   "details-blocking-by-name" : "Details of blocking by {name}",
@@ -190,6 +190,7 @@
   "hide" : "Hide",
   "hide-ellipsis" : "Hide...",
   "hide-friendship" : "Hide friendship",
+  "hide-in-discussions" : "Hide in discussions",
   "hide-my-subscription" : "Hide my subscription",
   "hide-subscription-to-me" : "Hide subscription to me",
   "ignore" : "Ignore",
