--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -99,7 +99,7 @@
   "deleting" : "Удаление...",
   "deny-comments" : "Запретить комментарии",
   "deny-comments-reactions" : "Запретить комментарии и реакции",
-  "deny-everything-hide" : "Запретить всё и скрыть",
+  "deny-everything-hide" : "Запретить всё и скрыть в обсуждениях",
   "description" : "Описание",
   "details-blocking" : "Подробности блокировки",
   "details-blocking-by-name" : "Подробности блокировки со стороны {name}",
@@ -190,6 +190,7 @@
   "hide" : "Скрыть",
   "hide-ellipsis" : "Скрыть...",
   "hide-friendship" : "Скрыть дружбу",
+  "hide-in-discussions" : "Скрыть в обсуждениях",
   "hide-my-subscription" : "Скрыть мою подписку",
   "hide-subscription-to-me" : "Скрыть подписку на меня",
   "ignore" : "Игнорировать",
