--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -99,7 +99,7 @@
   "deleting" : "Видалення...",
   "deny-comments" : "Заборонити коментарі",
   "deny-comments-reactions" : "Заборонити коментарі та реакції",
-  "deny-everything-hide" : "Заборонити все та приховати",
+  "deny-everything-hide" : "Заборонити все та приховати в обговореннях",
   "description" : "Опис",
   "details-blocking" : "Подробиці блокування",
   "details-blocking-by-name" : "Подробиці блокування з боку {name}",
@@ -190,6 +190,7 @@
   "hide" : "Приховати",
   "hide-ellipsis" : "Приховати...",
   "hide-friendship" : "Приховати дружбу",
+  "hide-in-discussions" : "Приховати в обговореннях",
   "hide-my-subscription" : "Приховати мою підписку",
   "hide-subscription-to-me" : "Приховати підписку на мене",
   "ignore" : "Ігнорувати",
