Kicking a user from a discussion.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -100,6 +100,7 @@
   "deny-comments" : "Deny comments",
   "deny-comments-reactions" : "Deny comments and reactions",
   "deny-everything-hide" : "Deny everything and hide in discussions",
+  "deny-everything-hide-in-discussion" : "Deny everything and hide in the discussion",
   "description" : "Description",
   "details-blocking" : "Details of blocking",
   "details-blocking-by-name" : "Details of blocking by {name}",
@@ -190,6 +191,7 @@
   "hide" : "Hide",
   "hide-ellipsis" : "Hide...",
   "hide-friendship" : "Hide friendship",
+  "hide-in-discussion" : "Hide in the discussion",
   "hide-in-discussions" : "Hide in discussions",
   "hide-my-subscription" : "Hide my subscription",
   "hide-subscription-to-me" : "Hide subscription to me",
@@ -277,6 +279,9 @@
   },
   "invitation-buttons" : "<0>Create a new blog</0><1>or</1><2>Connect to your blog</2>",
   "italic" : "Italic",
+  "kick" : "Kick",
+  "kick-ellipsis" : "Kick from discussion...",
+  "kicking-node" : "Kick {name} from the discussion",
   "language" : "Language",
   "last-post" : "last",
   "last-used" : "Last used:",
@@ -326,6 +331,7 @@
   "no-blocking" : "No blocking.",
   "node-name-not-exists" : "No node with such name exist.",
   "node-settings-changed-conflict" : "Blog settings were changed by somebody.",
+  "no-kick" : "Do not kick",
   "no-name-known" : "no name known",
   "no-name-set" : "no name set",
   "no-requests-available" : "No requests available.",
@@ -695,6 +701,7 @@
   "unfollow-comments" : "Unfollow comments",
   "unfriend" : "Unfriend",
   "unhide" : "Unhide",
+  "unkick" : "Take back",
   "unknown-name" : "Unknown name",
   "unpin" : "Unpin",
   "unselect-all" : "Unselect all",
