--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -100,6 +100,7 @@
   "deny-comments" : "Запретить комментарии",
   "deny-comments-reactions" : "Запретить комментарии и реакции",
   "deny-everything-hide" : "Запретить всё и скрыть в обсуждениях",
+  "deny-everything-hide-in-discussion" : "Запретить всё и скрыть в обсуждении",
   "description" : "Описание",
   "details-blocking" : "Подробности блокировки",
   "details-blocking-by-name" : "Подробности блокировки со стороны {name}",
@@ -190,6 +191,7 @@
   "hide" : "Скрыть",
   "hide-ellipsis" : "Скрыть...",
   "hide-friendship" : "Скрыть дружбу",
+  "hide-in-discussion" : "Скрыть в обсуждении",
   "hide-in-discussions" : "Скрыть в обсуждениях",
   "hide-my-subscription" : "Скрыть мою подписку",
   "hide-subscription-to-me" : "Скрыть подписку на меня",
@@ -277,6 +279,9 @@
   },
   "invitation-buttons" : "<0>Создать новый блог</0><1>или</1><2>Зайти в свой блог</2>",
   "italic" : "Курсив",
+  "kick" : "Выгнать",
+  "kick-ellipsis" : "Выгнать из обсуждения...",
+  "kicking-node" : "Выгнать {name} из обсуждения",
   "language" : "Язык",
   "last-post" : "последний",
   "last-used" : "Последнее использование:",
@@ -326,6 +331,7 @@
   "no-blocking" : "Нет блокировки.",
   "node-name-not-exists" : "Не существует блога с таким именем.",
   "node-settings-changed-conflict" : "Настройки блога были кем-то изменены.",
+  "no-kick" : "Не выгонять",
   "no-name-known" : "неизвестное имя",
   "no-name-set" : "имя не задано",
   "no-requests-available" : "Нет доступных просьб.",
@@ -695,6 +701,7 @@
   "unfollow-comments" : "Не следить за комментариями",
   "unfriend" : "Удалить из друзей",
   "unhide" : "Раскрыть",
+  "unkick" : "Вернуть",
   "unknown-name" : "Неизвестное имя",
   "unpin" : "Открепить",
   "unselect-all" : "Снять выбор",
