--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -100,6 +100,7 @@
   "deny-comments" : "Заборонити коментарі",
   "deny-comments-reactions" : "Заборонити коментарі та реакції",
   "deny-everything-hide" : "Заборонити все та приховати в обговореннях",
+  "deny-everything-hide-in-discussion" : "Заборонити все та приховати в обговоренні",
   "description" : "Опис",
   "details-blocking" : "Подробиці блокування",
   "details-blocking-by-name" : "Подробиці блокування з боку {name}",
@@ -190,6 +191,7 @@
   "hide" : "Приховати",
   "hide-ellipsis" : "Приховати...",
   "hide-friendship" : "Приховати дружбу",
+  "hide-in-discussion" : "Приховати в обговоренні",
   "hide-in-discussions" : "Приховати в обговореннях",
   "hide-my-subscription" : "Приховати мою підписку",
   "hide-subscription-to-me" : "Приховати підписку на мене",
@@ -277,6 +279,9 @@
   },
   "invitation-buttons" : "<0>Створити новий блог</0><1>або</1><2>Увійти у свій блог</2>",
   "italic" : "Курсив",
+  "kick" : "Вигнати",
+  "kick-ellipsis" : "Вигнати з обговорення...",
+  "kicking-node" : "Вигнати {name} з обговорення",
   "language" : "Мова",
   "last-post" : "останній",
   "last-used" : "Останнє використання:",
@@ -326,6 +331,7 @@
   "no-blocking" : "Немає блокування.",
   "node-name-not-exists" : "Не існує блогу з цим ім'ям.",
   "node-settings-changed-conflict" : "Налаштування блога були кимось змінені.",
+  "no-kick" : "Не виганяти",
   "no-name-known" : "невідоме ім'я",
   "no-name-set" : "ім'я не задано",
   "no-requests-available" : "Немає доступних прохань.",
@@ -695,6 +701,7 @@
   "unfollow-comments" : "Не слідкувати за коментарями",
   "unfriend" : "Вилучити з друзів",
   "unhide" : "Розкрити",
+  "unkick" : "Повернути",
   "unknown-name" : "Невідоме ім'я",
   "unpin" : "Відкріпити",
   "unselect-all" : "Зняти вибір",
