Display blocking details for blockings in a particular posting.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -216,6 +216,7 @@
   "in-blocked" : "In blocked",
   "in-blocked-plural" : "In blocked",
   "in-friends" : "In friends",
+  "in-post" : "In the post",
   "insert-image" : "Insert an image",
   "insert-link" : "Insert a link",
   "insert-mention" : "Insert a mention",
