--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -216,6 +216,7 @@
   "in-blocked" : "Заблокировал",
   "in-blocked-plural" : "Заблокировали",
   "in-friends" : "В друзьях",
+  "in-post" : "В посте",
   "insert-image" : "Вставить картинку",
   "insert-link" : "Вставить ссылку",
   "insert-mention" : "Вставить упоминание",
