--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -216,6 +216,7 @@
   "in-blocked" : "Заблокував",
   "in-blocked-plural" : "Заблокували",
   "in-friends" : "У друзях",
+  "in-post" : "У пості",
   "insert-image" : "Вставити картинку",
   "insert-link" : "Вставити посилання",
   "insert-mention" : "Вставити згадку",
