--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -245,6 +245,7 @@
       "asked-to-friend-group" : "{node} {gender, select, female {попросила} other {попросил}} вас добавить {gender, select, female {её} other {его}} в свою группу друзей \"{group}\"",
       "asked-to-subscribe" : "{node} {gender, select, female {попросила} other {попросил}} вас подписаться на {gender, select, female {её} other {его}} ленту",
       "blocked-user" : "{node} {gender, select, female {запретила} other {запретил}} вам {operations} {gender, select, female {её} other {его}} посты {period}",
+      "blocked-user-in-posting" : "{node} {gender, select, female {запретила} other {запретил}} вам {operations} {gender, select, female {её} other {его}} пост {heading} {period}",
       "comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} ваш пост {heading}",
       "comment-media-reaction-added" : "{reactions} картинку в вашем комментарии {heading} к {posting}",
       "comment-media-reaction-failed" : "Не удалось подписать реакцию на картинку в комментарии {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
@@ -271,7 +272,8 @@
       "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {ответила} other {ответил}}} other {ответили}} на ваш комментарий {heading} к {posting}",
       "subscriber-added" : "{node} {gender, select, female {подписалась} other {подписался}} на вашу ленту {feed}",
       "subscriber-deleted" : "{node} {gender, select, female {отписалась} other {отписался}} от вашей ленты {feed}",
-      "unblocked-user" : "{node} {gender, select, female {разрешила} other {разрешил}} вам {operations} {gender, select, female {её} other {его}} посты"
+      "unblocked-user" : "{node} {gender, select, female {разрешила} other {разрешил}} вам {operations} {gender, select, female {её} other {его}} посты",
+      "unblocked-user-in-posting" : "{node} {gender, select, female {разрешила} other {разрешил}} вам {operations} {gender, select, female {её} other {его}} пост {heading}"
     },
     "supported" : "{count, plural, =1 {{gender, select, female {одобрила} other {одобрил}}} other {одобрили}}",
     "their-post" : "свой пост",
